--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "moduleResolution": "node",
       "lib": ["ES2020", "DOM"],
       "experimentalDecorators": true,
-      "outDir": "./public/dist",
+      "outDir": "./public/build",
       "rootDir": "./src",
       "strict": true,
       "esModuleInterop": true
